<resources>
    <string name="app_name">Background Tasks</string>
    
    <string name="_http">HTTP</string>
    <string name="main_buttonHttp">@string/_http</string>
    <string name="http_toolbarTitle">HttpUrlConnection</string>
    <string name="_json">Json</string>
    <string name="dialogGet_wait">Estamos conectando espere por favor</string>
    <string name="http_noConnection">No hay conexión</string>
    <string name="dialogPost_wait">Se esta agregando el Usuario espere por favor</string>
    <string name="dialogPut_wait">Se esta axtualizando el Usuario espere por favor</string>
    <string name="dialogDelete_wait">Se esta eliminando el usuario espere por favor</string>
    <string name="http_buttonLoad">Load</string>
    <string name="http_editIdHint">Ingrese id</string>
    <string name="_post">post</string>
    <string name="_put">put</string>
    <string name="_delete">delete</string>
    <string name="main_buttonVolley">VOLLEY</string>
    <string name="volley_titleVerbs">Peticiones con Volley</string>
    <string name="volley_toolbarTitle">Volley</string>
    <string name="volley_buttonGet">GET</string>
    <string name="volley_buttonPost">POST</string>
    <string name="volley_buttonPut">PUT</string>
    <string name="volley_buttonDelete">DELETE</string>
    <string name="volley_hintEditId">id</string>
    <string name="volley_hintEditUsername">Nombre de usuario</string>
    <string name="volley_hintEditEmail">Correo electrónico</string>
    <string name="json_toolbarTitle">@string/_json</string>
    <string name="json_textViewTitleVerbs">Json raw deserilize</string>
    <string name="json_buttonGet">GET</string>
    <string name="main_buttonJson">JSON</string>
    <string name="gson_toolbarTitle">Gson</string>
    <string name="gson_textViewTitleVerbs">Gson deserialize</string>
    <string name="gson_buttonGet">GET</string>
    <string name="main_buttonGson">GSON</string>
    <string name="gson_buttonGetFromString">GET S</string>
    <string name="main_buttonOpenWeather">OPEN WEATHER</string>
    <string name="weather_toolbarTitle">Open Weather</string>
    <string name="weather_textViewTitle">Open Weather From Tunja</string>
    <string name="textView_weather_city">Tunja</string>
    <string name="main_buttonProvider">PROVIDER</string>
    <string name="provider_buttonInsert">Insertar</string>
    <string name="provider_buttonGetData">GET DATA</string>
</resources>
