<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exercises.sart1991.backgroundtasks.ui.activity.main.MainActivity">
    
    <Button
        android:id="@+id/button_main_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonHttp"
        android:text="@string/main_buttonHttp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
    
    <Button
        android:id="@+id/button_main_volley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonVolley"
        android:text="@string/main_buttonVolley"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_http" />
    
    <Button
        android:id="@+id/button_main_json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonJson"
        android:text="@string/main_buttonJson"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_volley" />
    
    <Button
        android:id="@+id/button_main_gson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonGson"
        android:text="@string/main_buttonGson"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_json" />
    
    <Button
        android:id="@+id/button_main_openWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_buttonOpenWeather"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_main_gson"
        android:onClick="onClickButtonOpenWeather"/>

</android.support.constraint.ConstraintLayout>
