<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.gson.GsonActivity"
    tools:showIn="@layout/content_gson">
    
    <TextView
        android:id="@+id/textView_gson_titleVerbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gson_textViewTitleVerbs"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/button_gson_get"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_gson_get"
        app:layout_constraintTop_toTopOf="@+id/button_gson_get" />
    
    <Button
        android:id="@+id/button_gson_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonGet"
        android:text="@string/gson_buttonGet"
        app:layout_constraintLeft_toRightOf="@id/textView_gson_titleVerbs"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <Button
        android:id="@+id/button_gson_getFromString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gson_buttonGetFromString"
        app:layout_constraintLeft_toLeftOf="@id/button_gson_get"
        app:layout_constraintRight_toRightOf="@id/button_gson_get"
        app:layout_constraintTop_toBottomOf="@id/button_gson_get"
        android:onClick="onClickButtonGetFromString"/>

</android.support.constraint.ConstraintLayout>